--- a/recall-sequence.html
+++ b/recall-sequence.html
@@ -20,6 +20,6 @@
                 <td><label for="output">Output</label></td>
                 <td><input type="text" id="output"></td>
             </tr>        
-        <script src="js/practice.js"></script>
+        <script src="js/recall-sequence.js"></script>
     </body>
 </html>
