--- a/recall-sequence.html
+++ b/recall-sequence.html
@@ -9,7 +9,7 @@
             <tr>
                 <td><label for="iterations">Iterations</label></td>
                 <td><input type="number" id="iterations"></td>
-                <td><button onclick="train();">Train</button>
+                <td><button onclick="train();">Train</button></td>
             </tr>
             <tr>
                 <td><label for="input">Input</label></td>
@@ -19,7 +19,8 @@
             <tr>
                 <td><label for="output">Output</label></td>
                 <td><input type="text" id="output"></td>
-            </tr>        
+            </tr>      
+        </table>      
         <script src="js/recall-sequence.js"></script>
     </body>
 </html>
